# 2025_Multi_Objective_CMS

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  main.py  moo_oven.py  pymoo_test.py  pyproject.toml
cms_2025/plotting/: data_250325_consumption_data_oven_frank.csv  heat_treatment_process.py  motivation.ipynb
framework/: callback.py  interfaces.py  parallelization.ipynb  result.py  termination.py
moo_code_oven_ETA/: initialization.py  problem_definition.py
plots/: heat_treatment_real.py  solution_space_3d.py
test/: constraint_handling.py  convergence_analysis.py  pymoo_test.ipynb  pymoo_test.py
visualization/: plot_overview.py
